Changes for SFTP connection.

--- a/VCRRefndFTPApp/App.config
+++ b/VCRRefndFTPApp/App.config
@@ -58,7 +58,7 @@
 			<add key="ImageFTPPassword" value="test@123" />
 			<add key="MvsDestFile" value= "RF_AP-outbound/VCRRefund/" />
       <add key="SshHostKeyFingerprint" value= "ssh-rsa 2048 f9:d5:14:4e:a0:68:04:dc:b6:e8:17:49:93:1e:4d:29" />
-      <add key="SshPrivateKeyPath" value= "C:\Code_Git\RefundPrivatekey.ppk" />
+      <add key="SshPrivateKeyPath" value= "C:\Code\VCRRefundsGit\1_VCRrefunds-main\VCRRefndFTPApp\RefundPrivatekey.ppk" />
 			<add key="LocalJclFile" value="" />
 			<add key="SiteSubmit" value="" />
 			<add key="MvsJclFile" value="" />
@@ -84,7 +84,7 @@
       <add key="ImageFTPPassword" value="test@123" />
       <add key="MvsDestFile" value="/outbound/uat_outbound/" />
       <add key="SshHostKeyFingerprint" value= "ssh-rsa 2048 f9:d5:14:4e:a0:68:04:dc:b6:e8:17:49:93:1e:4d:29" />
-      <add key="SshPrivateKeyPath" value= "C:\Code_Git\RefundPrivatekey.ppk" />
+      <add key="SshPrivateKeyPath" value= "C:\Code\VCRRefundsGit\1_VCRrefunds-main\VCRRefndFTPApp\RefundPrivatekey.ppk"/>
 			<add key="LocalJclFile" value="" />
 			<add key="SiteSubmit" value="" />
 			<add key="MvsJclFile" value="" />
@@ -110,7 +110,7 @@
       <add key="ImageFTPPassword" value="test@123" />
       <add key="MvsDestFile" value="/outbound/uat_outbound/" />
       <add key="SshHostKeyFingerprint" value= "ssh-rsa 2048 f9:d5:14:4e:a0:68:04:dc:b6:e8:17:49:93:1e:4d:29" />
-      <add key="SshPrivateKeyPath" value= "C:\Code_Git\RefundPrivatekey.ppk" />
+      <add key="SshPrivateKeyPath" value= "C:\Code\VCRRefundsGit\1_VCRrefunds-main\VCRRefndFTPApp\RefundPrivatekey.ppk" />
 			<add key="LocalJclFile" value="" />
 			<add key="SiteSubmit" value="" />
 			<add key="MvsJclFile" value="" />
@@ -136,7 +136,7 @@
       <add key="ImageFTPPassword" value="" />
       <add key="MvsDestFile" value="/outbound/prod_outbound/" />
       <add key="SshHostKeyFingerprint" value= "" />
-      <add key="SshPrivateKeyPath" value= "" />
+      <add key="SshPrivateKeyPath" value= "C:\Code\VCRRefundsGit\1_VCRrefunds-main\VCRRefndFTPApp\RefundPrivatekey.ppk" />
 			<add key="LocalJclFile" value="" />
 			<add key="SiteSubmit" value="" />
 			<add key="MvsJclFile" value="" />
